--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-https://github.com/vkhiep/vkhiep.github.io/releases
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://github.com/vkhiep/vkhiep.github.io/releases">
+        <script type="text/javascript">
+            window.location.href = "https://github.com/vkhiep/vkhiep.github.io/releases"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://github.com/vkhiep/vkhiep.github.io/releases'>ipa</a>.
+    </body>
+</html>
+
