--- a/jb/index.html
+++ b/jb/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+  background-color: lightgreen;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+</style>
+</head>
 <body>
 
 <p>Click on the logo to download:<p>
