--- a/jb/index.html
+++ b/jb/index.html
@@ -15,12 +15,16 @@ body {
 </style>
 </head>
 <body>
-
+<center>
 <p>Click on the logo to download:<p>
 
-<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>     
+<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a> 
+<br>    
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/geometry.plist"><img src="https://vkhiep.github.io/jb/geometry.png" style="width:82px; height:86px" title="geometry" alt="geometry"></a>      
+<br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+<br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+</center>
 </body>
 </html>
