--- a/jb/index.html
+++ b/jb/index.html
@@ -22,7 +22,7 @@ body {
 <br><br><br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/geometry.plist"><img src="https://vkhiep.github.io/jb/geometry.png" style="width:82px; height:86px" title="geometry" alt="geometry"></a>      
 <br><br><br>
-<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
 <br><br><br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
 </center>
