--- a/jb/index.html
+++ b/jb/index.html
@@ -24,7 +24,7 @@ body {
 <br><br><br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
 <br><br><br>
-<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+<a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/bendy.plist"><img src="https://vkhiep.github.io/jb/bendy.png" style="width:82px; height:86px" title="Bendy and the Ink Machine" alt="Bendy and the Ink Machine"></a>
 </center>
 </body>
 </html>
