--- a/jb/index.html
+++ b/jb/index.html
@@ -16,7 +16,7 @@ body {
 </head>
 <body>
 <center>
-<p>Click on the logo to download:<p>
+<p>Nhấn vào ảnh để tải game cho máy jb:<p>
 
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a> 
 <br><br><br>
