--- a/ip/index.html
+++ b/ip/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Cài đặt app, game cho máy đã jb</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
@@ -53,24 +54,24 @@
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-    <a href="#">Link 4</a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/geometry.plist"><img src="https://vkhiep.github.io/jb/geometry.png" style="width:82px; height:86px" title="Geometry" alt="Geometry"></a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/bendy.plist"><img src="https://vkhiep.github.io/jb/bendy.png" style="width:82px; height:86px" title="Bendy and the Ink Machine" alt="Bendy and the Ink Machine"></a>
   </div>
 
   <div class="main">
-    <h2>Lorum Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <h2>Cài đặt game cho máy đã jb</h2>
+    <p>Chỉ hổ trợ cho máy đã jb, những máy chưa jb không thể cài.</p>
   </div>
 
   <div class="right">
     <h2>About</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+    <p>Vũ Khắc Hiệp</p>
   </div>
 </div>
 
-<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">© copyright w3schools.com</div>
+<div style="background-color:#e5e5e5;text-align:center;padding:10px;margin-top:7px;">© Copyright Vũ Khắc Hiệp</div>
 
 </body>
 </html>
