--- a/ip/index.html
+++ b/ip/index.html
@@ -49,7 +49,7 @@
 <body style="font-family:Verdana;color:#aaaaaa;">
 
 <div style="background-color:#e5e5e5;padding:15px;text-align:center;">
-  <h1>Hello World</h1>
+  <h1>Hello</h1>
 </div>
 
 <div style="overflow:auto">
@@ -58,6 +58,7 @@
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/geometry.plist"><img src="https://vkhiep.github.io/jb/geometry.png" style="width:82px; height:86px" title="Geometry" alt="Geometry"></a>
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/bendy.plist"><img src="https://vkhiep.github.io/jb/bendy.png" style="width:82px; height:86px" title="Bendy and the Ink Machine" alt="Bendy and the Ink Machine"></a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/pocketcity2.plist"><img src="https://vkhiep.github.io/jb/pocketcity2.png" style="width:82px; height:86px" title="Pocket City 2" alt="Pocket City 2"></a>
   </div>
 
   <div class="main">
