--- a/jb/index.html
+++ b/jb/index.html
@@ -25,6 +25,8 @@ body {
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
 <br><br><br>
 <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/bendy.plist"><img src="https://vkhiep.github.io/jb/bendy.png" style="width:82px; height:86px" title="Bendy and the Ink Machine" alt="Bendy and the Ink Machine"></a>
+<br><br><br>
+<a href="itms-services://?action=download-manifest&amp;url=https://vkhiep.github.io/jb/pocketcity2.plist"><img src="https://vkhiep.github.io/jb/pocketcity2.png" style="width:82px; height:86px" title="Pocket City 2" alt="Pocket City 2"></a>
 </center>
 </body>
 </html>
