--- a/ip/test.html
+++ b/ip/test.html
@@ -1,59 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="utf-8">
- <title>Trang web tải xuống</title>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <style>
-  .box {
-   display: inline-block;
-   position: relative;
-   margin: 1em;
-   padding: 0;
-  }
-  
-  .box img {
-   display: block;
-   width: 100%;
-   height: auto;
-  }
-  
-  .box a {
-   display: block;
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-  }
-  
-  .box button {
-   display: block;
-   position: absolute;
-   padding: 1em;
-   background-color: white;
-   color: black;
-   border: none;
-   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-   font-size: 1em;
-   font-weight: bold;
-   text-align: center;
-   text-decoration: none;
-   text-transform: uppercase;
-   letter-spacing: 0.1em;
-   margin: 0 auto;
-   top: calc(50% - 0.5em);
-   left: calc(50% - 0.5em);
-   cursor: pointer;
-  }
- </style>
+ <title>Các Liên Kết Tải Xuống</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
- <div class="box">
-  <img src="https://i.imgur.com/tB9rVXl.jpg" alt="Hình ảnh tải xuống">
-  <a href="https://example.com/download">
-   <button>Tải xuống</button>
-  </a>
+
+ <div class="container">
+  <h1>Các Liên Kết Tải Xuống</h1>
+  <ul>
+   <li><a href="#">Tập tin 1</a></li>
+   <li><a href="#">Tập tin 2</a></li>
+   <li><a href="#">Tập tin 3</a></li>
+   <li><a href="#">Tập tin 4</a></li>
+   <li><a href="#">Tập tin 5</a></li>
+  </ul>
  </div>
+
 </body>
 </html>
