--- a/jb/index.html
+++ b/jb/index.html
@@ -54,7 +54,7 @@
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/diutube.plist"><img src="https://vkhiep.github.io/jb/diutube.png" style="width:82px; height:86px" title="Diutube" alt="Diutube"></a>
+    <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/YouTube.plist"><img src="https://vkhiep.github.io/jb/ytb.png" style="width:82px; height:86px" title="YouTube" alt="YouTube"></a>
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/geometry.plist"><img src="https://vkhiep.github.io/jb/geometry.png" style="width:82px; height:86px" title="Geometry" alt="Geometry"></a>
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/minecraft.plist"><img src="https://vkhiep.github.io/jb/minecraft.png" style="width:82px; height:86px" title="Minecraft" alt="Minecraft"></a>
     <a href="itms-services://?action=download-manifest&url=https://vkhiep.github.io/jb/bendy.plist"><img src="https://vkhiep.github.io/jb/bendy.png" style="width:82px; height:86px" title="Bendy and the Ink Machine" alt="Bendy and the Ink Machine"></a>
